# pitot

./: .gitignore  Makefile  README.md  ablate.ipynb  benchmarks.md  compare.ipynb  create_dataset.sh  data.if.mc.npz  data.if.npz  data.if3.mc.npz  data.if3.npz  data.npz  data.small.npz  data_cfs.npz  dataset.py  datasets.md  experiments.py  forecast.py  if.mc.npz  if.npz  if3.mc.npz  if3.npz  inspect.ipynb  interference.py  jax.ipynb  join.py  manage.py  models.py  mypy.ini  opcodes.py  parse.py  plot.ipynb  plot.py  polybench-20-40.npz  polybench.npz  predict.ipynb  predict2.ipynb  preprocess.py  pyproject.toml  requirements-dev.txt  (+9 more)
collect/: __init__.py  opcodes.py  plot.py
data/: _opcodes.npz  _platforms.npz  data.npz  if2.npz  matrix.npz  opcodes.npz  platforms.npz
dataset/: __init__.py  dataset.py  session.py  utils.py
forecast/: __init__.py  presets.py  result.py
notebooks/: compare.ipynb  figures.ipynb  inspect.ipynb  metadata.ipynb  tsne.ipynb
old/: plot.ipynb
pitot/: __init__.py  _presets.py  attention.py  ignore.py  linear_scaling.py  monolith.py  pitot.py  presets.py
plot/: __init__.py  ablations.py  ablations_table.py  ablations_width.py  by_platform_category.py  compare.py  embedded.py  figures.py  hyperparameters.py  interference.py  interference_norm.py  margin_full.py  marginals.py  plot.py  plot_dataset.py  quantile_selection.py  result.py  simulation.py  tsne.py
prediction/: __init__.py  _models.py  calibrate.py  dataset.py  embeddings.py  history.py  loss.py  model.py  models.py  modules.py  objective.py  presets.py  rank1.py  split.py  (+3 more)
(+60 files in other folders)
